expr/ExprCppTreeParser.c
/** \file
 *  This C source file was generated by $ANTLR version 3.3 Nov 30, 2010 12:45:30
 *
 *     -  From the grammar source file : D:\\message\\ExprCppTree.g
 *     -                            On : 2013-07-29 12:55:45
 *     -                for the parser : ExprCppTreeParserParser *
 * Editing it, at least manually, is not wise. 
 *
 * C language generator and runtime by Jim Idle, jimi|hereisanat|idle|dotgoeshere|ws.
 *
 *
*/
// [The "BSD licence"]
// Copyright (c) 2005-2009 Jim Idle, Temporal Wave LLC
// http://www.temporal-wave.com
// http://www.linkedin.com/in/jimidle
//
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions
// are met:
// 1. Redistributions of source code must retain the above copyright
//    notice, this list of conditions and the following disclaimer.
// 2. Redistributions in binary form must reproduce the above copyright
//    notice, this list of conditions and the following disclaimer in the
//    documentation and/or other materials provided with the distribution.
// 3. The name of the author may not be used to endorse or promote products
//    derived from this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE AUTHOR ``AS IS'' AND ANY EXPRESS OR
// IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES
// OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED.
// IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR ANY DIRECT, INDIRECT,
// INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT
// NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF
// THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

/* -----------------------------------------
 * Include the ANTLR3 generated header file.
 */
#include    "ExprCppTreeParser.h"
/* ----------------------------------------- */





/* MACROS that hide the C interface implementations from the
 * generated code, which makes it a little more understandable to the human eye.
 * I am very much against using C pre-processor macros for function calls and bits
 * of code as you cannot see what is happening when single stepping in debuggers
 * and so on. The exception (in my book at least) is for generated code, where you are
 * not maintaining it, but may wish to read and understand it. If you single step it, you know that input()
 * hides some indirect calls, but is always referring to the input stream. This is
 * probably more readable than ctx->input->istream->input(snarfle0->blarg) and allows me to rejig
 * the runtime interfaces without changing the generated code too often, without
 * confusing the reader of the generated output, who may not wish to know the gory
 * details of the interface inheritance.
 */
 
#define		CTX	ctx

/* Aids in accessing scopes for grammar programmers
 */
#undef	SCOPE_TYPE
#undef	SCOPE_STACK
#undef	SCOPE_TOP
#define	SCOPE_TYPE(scope)   pExprCppTreeParser_##scope##_SCOPE
#define SCOPE_STACK(scope)  pExprCppTreeParser_##scope##Stack
#define	SCOPE_TOP(scope)    ctx->pExprCppTreeParser_##scope##Top
#define	SCOPE_SIZE(scope)		ctx->pExprCppTreeParser_##scope##Stack_limit
#define SCOPE_INSTANCE(scope, i)	(ctx->SCOPE_STACK(scope)->get(ctx->SCOPE_STACK(scope),i))

/* Macros for accessing things in the parser
 */
 
#undef	    PARSER		    
#undef	    RECOGNIZER		    
#undef	    HAVEPARSEDRULE
#undef		MEMOIZE
#undef	    INPUT
#undef	    STRSTREAM
#undef	    HASEXCEPTION
#undef	    EXCEPTION
#undef	    MATCHT
#undef	    MATCHANYT
#undef	    FOLLOWSTACK
#undef	    FOLLOWPUSH
#undef	    FOLLOWPOP
#undef	    PRECOVER
#undef	    PREPORTERROR
#undef	    LA
#undef	    LT
#undef	    CONSTRUCTEX
#undef	    CONSUME
#undef	    MARK
#undef	    REWIND
#undef	    REWINDLAST
#undef	    PERRORRECOVERY
#undef	    HASFAILED
#undef	    FAILEDFLAG
#undef	    RECOVERFROMMISMATCHEDSET
#undef	    RECOVERFROMMISMATCHEDELEMENT
#undef		INDEX
#undef      ADAPTOR
#undef		SEEK
#undef	    RULEMEMO		    
#undef		DBG

#define	    PARSER				ctx->pParser  
#define	    RECOGNIZER				PARSER->rec
#define	    PSRSTATE				RECOGNIZER->state
#define	    HAVEPARSEDRULE(r)			RECOGNIZER->alreadyParsedRule(RECOGNIZER, r)
#define	    MEMOIZE(ri,si)			RECOGNIZER->memoize(RECOGNIZER, ri, si)
#define	    INPUT				PARSER->tstream
#define	    STRSTREAM				INPUT
#define	    ISTREAM				INPUT->istream
#define	    INDEX()				ISTREAM->index(INPUT->istream)
#define	    HASEXCEPTION()			(PSRSTATE->error == ANTLR3_TRUE)
#define	    EXCEPTION				PSRSTATE->exception
#define	    MATCHT(t, fs)			RECOGNIZER->match(RECOGNIZER, t, fs)
#define	    MATCHANYT()				RECOGNIZER->matchAny(RECOGNIZER)
#define	    FOLLOWSTACK				PSRSTATE->following
#ifdef  SKIP_FOLLOW_SETS
#define	    FOLLOWPUSH(x)
#define	    FOLLOWPOP()
#else
#define	    FOLLOWPUSH(x)			FOLLOWSTACK->push(FOLLOWSTACK, ((void *)(&(x))), NULL)
#define	    FOLLOWPOP()				FOLLOWSTACK->pop(FOLLOWSTACK)
#endif
#define	    PRECOVER()				RECOGNIZER->recover(RECOGNIZER)
#define	    PREPORTERROR()			RECOGNIZER->reportError(RECOGNIZER)
#define	    LA(n)				INPUT->istream->_LA(ISTREAM, n)
#define	    LT(n)				INPUT->_LT(INPUT, n)
#define	    CONSTRUCTEX()			RECOGNIZER->exConstruct(RECOGNIZER)
#define	    CONSUME()				ISTREAM->consume(ISTREAM)
#define	    MARK()				ISTREAM->mark(ISTREAM)
#define	    REWIND(m)				ISTREAM->rewind(ISTREAM, m)
#define	    REWINDLAST()			ISTREAM->rewindLast(ISTREAM)
#define	    SEEK(n)				ISTREAM->seek(ISTREAM, n)
#define	    PERRORRECOVERY			PSRSTATE->errorRecovery
#define	    FAILEDFLAG				PSRSTATE->failed
#define	    HASFAILED()				(FAILEDFLAG == ANTLR3_TRUE)
#define	    BACKTRACKING			PSRSTATE->backtracking
#define	    RECOVERFROMMISMATCHEDSET(s)		RECOGNIZER->recoverFromMismatchedSet(RECOGNIZER, s)
#define	    RECOVERFROMMISMATCHEDELEMENT(e)	RECOGNIZER->recoverFromMismatchedElement(RECOGNIZER, s)
#define     ADAPTOR                         ctx->adaptor
#define		RULEMEMO						PSRSTATE->ruleMemo
#define		DBG								RECOGNIZER->debugger

#define		TOKTEXT(tok, txt)				tok, (pANTLR3_UINT8)txt

/* The 4 tokens defined below may well clash with your own #defines or token types. If so
 * then for the present you must use different names for your defines as these are hard coded
 * in the code generator. It would be better not to use such names internally, and maybe
 * we can change this in a forthcoming release. I deliberately do not #undef these
 * here as this will at least give you a redefined error somewhere if they clash.
 */
#define	    UP	    ANTLR3_TOKEN_UP
#define	    DOWN    ANTLR3_TOKEN_DOWN
#define	    EOR	    ANTLR3_TOKEN_EOR
#define	    INVALID ANTLR3_TOKEN_INVALID


/* =============================================================================
 * Functions to create and destroy scopes. First come the rule scopes, followed
 * by the global declared scopes.
 */



/* ============================================================================= */

/* =============================================================================
 * Start of recognizer
 */



/** \brief Table of all token names in symbolic order, mainly used for
 *         error reporting.
 */
pANTLR3_UINT8   ExprCppTreeParserTokenNames[10+4]
     = {
        (pANTLR3_UINT8) "<invalid>",       /* String to print to indicate an invalid token */
        (pANTLR3_UINT8) "<EOR>",
        (pANTLR3_UINT8) "<DOWN>", 
        (pANTLR3_UINT8) "<UP>", 
        (pANTLR3_UINT8) "PLUS",
        (pANTLR3_UINT8) "MINUS",
        (pANTLR3_UINT8) "TIMES",
        (pANTLR3_UINT8) "INT",
        (pANTLR3_UINT8) "ID",
        (pANTLR3_UINT8) "NEWLINE",
        (pANTLR3_UINT8) "ASSIGN",
        (pANTLR3_UINT8) "WS",
        (pANTLR3_UINT8) "'('",
        (pANTLR3_UINT8) "')'"
       };

        

// Forward declare the locally static matching functions we have generated.
//
static ExprCppTreeParser_expr_return	expr    (pExprCppTreeParser ctx);
static ExprCppTreeParser_multExpr_return	multExpr    (pExprCppTreeParser ctx);
static ExprCppTreeParser_atom_return	atom    (pExprCppTreeParser ctx);
static ExprCppTreeParser_stmt_return	stmt    (pExprCppTreeParser ctx);
static ExprCppTreeParser_prog_return	prog    (pExprCppTreeParser ctx);
static void	ExprCppTreeParserFree(pExprCppTreeParser ctx);
static void     ExprCppTreeParserReset (pExprCppTreeParser ctx);

/* For use in tree output where we are accumulating rule labels via label += ruleRef
 * we need a function that knows how to free a return scope when the list is destroyed. 
 * We cannot just use ANTLR3_FREE because in debug tracking mode, this is a macro.
 */
static	void ANTLR3_CDECL freeScope(void * scope)
{
    ANTLR3_FREE(scope);
}

/** \brief Name of the grammar file that generated this code
 */
static const char fileName[] = "D:\\message\\ExprCppTree.g";

/** \brief Return the name of the grammar file that generated this code.
 */
static const char * getGrammarFileName()
{
	return fileName;
}
/** \brief Create a new ExprCppTreeParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pExprCppTreeParser
ExprCppTreeParserNew   (pANTLR3_COMMON_TOKEN_STREAM instream)
{
	// See if we can create a new parser with the standard constructor
	//
	return ExprCppTreeParserNewSSD(instream, NULL);
}

/** \brief Create a new ExprCppTreeParser parser and return a context for it.
 *
 * \param[in] instream Pointer to an input stream interface.
 *
 * \return Pointer to new parser context upon success.
 */
ANTLR3_API pExprCppTreeParser
ExprCppTreeParserNewSSD   (pANTLR3_COMMON_TOKEN_STREAM instream, pANTLR3_RECOGNIZER_SHARED_STATE state)
{
    pExprCppTreeParser ctx;	    /* Context structure we will build and return   */
    
    ctx	= (pExprCppTreeParser) ANTLR3_CALLOC(1, sizeof(ExprCppTreeParser));
    
    if	(ctx == NULL)
    {
		// Failed to allocate memory for parser context
		//
        return  NULL;
    }
    
    /* -------------------------------------------------------------------
     * Memory for basic structure is allocated, now to fill in
     * the base ANTLR3 structures. We initialize the function pointers
     * for the standard ANTLR3 parser function set, but upon return
     * from here, the programmer may set the pointers to provide custom
     * implementations of each function. 
     *
     * We don't use the macros defined in ExprCppTreeParser.h here, in order that you can get a sense
     * of what goes where.
     */

    /* Create a base parser/recognizer, using the supplied token stream
     */
    ctx->pParser	    = antlr3ParserNewStream(ANTLR3_SIZE_HINT, instream->tstream, state);
    /* Install the implementation of our ExprCppTreeParser interface
     */
    ctx->expr	= expr;
    ctx->multExpr	= multExpr;
    ctx->atom	= atom;
    ctx->stmt	= stmt;
    ctx->prog	= prog;
    ctx->free			= ExprCppTreeParserFree;
    ctx->reset			= ExprCppTreeParserReset;
    ctx->getGrammarFileName	= getGrammarFileName;
    
    /* Install the scope pushing methods.
     */
    ADAPTOR	= ANTLR3_TREE_ADAPTORNew(instream->tstream->tokenSource->strFactory);
    ctx->vectors	= antlr3VectorFactoryNew(0);
    

	
    /* Install the token table
     */
    PSRSTATE->tokenNames   = ExprCppTreeParserTokenNames;
    
    
    /* Return the newly built parser to the caller
     */
    return  ctx;
}

static void
ExprCppTreeParserReset (pExprCppTreeParser ctx)
{
    RECOGNIZER->reset(RECOGNIZER);
}

/** Free the parser resources
 */
 static void
 ExprCppTreeParserFree(pExprCppTreeParser ctx)
 {
    /* Free any scope memory
     */
    
    ctx->vectors->close(ctx->vectors);
    /* We created the adaptor so we must free it
     */
    ADAPTOR->free(ADAPTOR);
	// Free this parser
	//
    ctx->pParser->free(ctx->pParser);
    
    ANTLR3_FREE(ctx);

    /* Everything is released, so we can return
     */
    return;
 }
 
/** Return token names used by this parser
 *
 * The returned pointer is used as an index into the token names table (using the token 
 * number as the index).
 * 
 * \return Pointer to first char * in the table.
 */
static pANTLR3_UINT8    *getTokenNames() 
{
        return ExprCppTreeParserTokenNames; 
}

    
/* Declare the bitsets
 */

/** Bitset defining follow set for error recovery in rule state: FOLLOW_multExpr_in_expr46  */
static	ANTLR3_BITWORD FOLLOW_multExpr_in_expr46_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000032) };
static  ANTLR3_BITSET_LIST FOLLOW_multExpr_in_expr46	= { FOLLOW_multExpr_in_expr46_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_PLUS_in_expr50  */
static	ANTLR3_BITWORD FOLLOW_PLUS_in_expr50_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001180) };
static  ANTLR3_BITSET_LIST FOLLOW_PLUS_in_expr50	= { FOLLOW_PLUS_in_expr50_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_MINUS_in_expr55  */
static	ANTLR3_BITWORD FOLLOW_MINUS_in_expr55_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001180) };
static  ANTLR3_BITSET_LIST FOLLOW_MINUS_in_expr55	= { FOLLOW_MINUS_in_expr55_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_multExpr_in_expr59  */
static	ANTLR3_BITWORD FOLLOW_multExpr_in_expr59_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000032) };
static  ANTLR3_BITSET_LIST FOLLOW_multExpr_in_expr59	= { FOLLOW_multExpr_in_expr59_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_atom_in_multExpr91  */
static	ANTLR3_BITWORD FOLLOW_atom_in_multExpr91_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000042) };
static  ANTLR3_BITSET_LIST FOLLOW_atom_in_multExpr91	= { FOLLOW_atom_in_multExpr91_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_TIMES_in_multExpr94  */
static	ANTLR3_BITWORD FOLLOW_TIMES_in_multExpr94_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001180) };
static  ANTLR3_BITSET_LIST FOLLOW_TIMES_in_multExpr94	= { FOLLOW_TIMES_in_multExpr94_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_atom_in_multExpr97  */
static	ANTLR3_BITWORD FOLLOW_atom_in_multExpr97_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000042) };
static  ANTLR3_BITSET_LIST FOLLOW_atom_in_multExpr97	= { FOLLOW_atom_in_multExpr97_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_INT_in_atom118  */
static	ANTLR3_BITWORD FOLLOW_INT_in_atom118_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_INT_in_atom118	= { FOLLOW_INT_in_atom118_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_ID_in_atom126  */
static	ANTLR3_BITWORD FOLLOW_ID_in_atom126_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_ID_in_atom126	= { FOLLOW_ID_in_atom126_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_12_in_atom134  */
static	ANTLR3_BITWORD FOLLOW_12_in_atom134_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001180) };
static  ANTLR3_BITSET_LIST FOLLOW_12_in_atom134	= { FOLLOW_12_in_atom134_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_expr_in_atom137  */
static	ANTLR3_BITWORD FOLLOW_expr_in_atom137_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000002000) };
static  ANTLR3_BITSET_LIST FOLLOW_expr_in_atom137	= { FOLLOW_expr_in_atom137_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_13_in_atom139  */
static	ANTLR3_BITWORD FOLLOW_13_in_atom139_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_13_in_atom139	= { FOLLOW_13_in_atom139_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_expr_in_stmt152  */
static	ANTLR3_BITWORD FOLLOW_expr_in_stmt152_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000200) };
static  ANTLR3_BITSET_LIST FOLLOW_expr_in_stmt152	= { FOLLOW_expr_in_stmt152_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_stmt154  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_stmt154_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_stmt154	= { FOLLOW_NEWLINE_in_stmt154_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_ID_in_stmt168  */
static	ANTLR3_BITWORD FOLLOW_ID_in_stmt168_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000400) };
static  ANTLR3_BITSET_LIST FOLLOW_ID_in_stmt168	= { FOLLOW_ID_in_stmt168_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_ASSIGN_in_stmt170  */
static	ANTLR3_BITWORD FOLLOW_ASSIGN_in_stmt170_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001180) };
static  ANTLR3_BITSET_LIST FOLLOW_ASSIGN_in_stmt170	= { FOLLOW_ASSIGN_in_stmt170_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_expr_in_stmt172  */
static	ANTLR3_BITWORD FOLLOW_expr_in_stmt172_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000200) };
static  ANTLR3_BITSET_LIST FOLLOW_expr_in_stmt172	= { FOLLOW_expr_in_stmt172_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_stmt174  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_stmt174_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_stmt174	= { FOLLOW_NEWLINE_in_stmt174_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_NEWLINE_in_stmt193  */
static	ANTLR3_BITWORD FOLLOW_NEWLINE_in_stmt193_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000000002) };
static  ANTLR3_BITSET_LIST FOLLOW_NEWLINE_in_stmt193	= { FOLLOW_NEWLINE_in_stmt193_bits, 1	};
/** Bitset defining follow set for error recovery in rule state: FOLLOW_stmt_in_prog223  */
static	ANTLR3_BITWORD FOLLOW_stmt_in_prog223_bits[]	= { ANTLR3_UINT64_LIT(0x0000000000001382) };
static  ANTLR3_BITSET_LIST FOLLOW_stmt_in_prog223	= { FOLLOW_stmt_in_prog223_bits, 1	};
     

 
 
/* ==============================================
 * Parsing rules
 */
/** 
 * $ANTLR start expr
 * D:\\message\\ExprCppTree.g:10:1: expr : multExpr ( ( PLUS | MINUS ) multExpr )* ;
 */
static ExprCppTreeParser_expr_return
expr(pExprCppTreeParser ctx)
{   
    ExprCppTreeParser_expr_return retval;

    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    PLUS2;
    pANTLR3_COMMON_TOKEN    MINUS3;
    ExprCppTreeParser_multExpr_return multExpr1;
    #undef	RETURN_TYPE_multExpr1
    #define	RETURN_TYPE_multExpr1 ExprCppTreeParser_multExpr_return

    ExprCppTreeParser_multExpr_return multExpr4;
    #undef	RETURN_TYPE_multExpr4
    #define	RETURN_TYPE_multExpr4 ExprCppTreeParser_multExpr_return

    pANTLR3_BASE_TREE PLUS2_tree;
    pANTLR3_BASE_TREE MINUS3_tree;

    /* Initialize rule variables
     */


    root_0 = NULL;

    PLUS2       = NULL;
    MINUS3       = NULL;
    multExpr1.tree = NULL;
    multExpr4.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;

    PLUS2_tree   = NULL;
    MINUS3_tree   = NULL;


    retval.tree  = NULL;
    {
        // D:\\message\\ExprCppTree.g:10:5: ( multExpr ( ( PLUS | MINUS ) multExpr )* )
        // D:\\message\\ExprCppTree.g:10:7: multExpr ( ( PLUS | MINUS ) multExpr )*
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));

            FOLLOWPUSH(FOLLOW_multExpr_in_expr46);
            multExpr1=multExpr(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto ruleexprEx;
            }

            ADAPTOR->addChild(ADAPTOR, root_0, multExpr1.tree);

            // D:\\message\\ExprCppTree.g:10:16: ( ( PLUS | MINUS ) multExpr )*

            for (;;)
            {
                int alt2=2;
                switch ( LA(1) ) 
                {
                case PLUS:
                case MINUS:
                	{
                		alt2=1;
                	}
                    break;

                }

                switch (alt2) 
                {
            	case 1:
            	    // D:\\message\\ExprCppTree.g:10:17: ( PLUS | MINUS ) multExpr
            	    {

            	        // D:\\message\\ExprCppTree.g:10:17: ( PLUS | MINUS )
            	        {
            	            int alt1=2;
            	            switch ( LA(1) ) 
            	            {
            	            case PLUS:
            	            	{
            	            		alt1=1;
            	            	}
            	                break;
            	            case MINUS:
            	            	{
            	            		alt1=2;
            	            	}
            	                break;

            	            default:
            	                CONSTRUCTEX();
            	                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
            	                EXCEPTION->message      = (void *)"";
            	                EXCEPTION->decisionNum  = 1;
            	                EXCEPTION->state        = 0;


            	                goto ruleexprEx;
            	            }

            	            switch (alt1) 
            	            {
            	        	case 1:
            	        	    // D:\\message\\ExprCppTree.g:10:18: PLUS
            	        	    {
            	        	        PLUS2 = (pANTLR3_COMMON_TOKEN) MATCHT(PLUS, &FOLLOW_PLUS_in_expr50); 
            	        	        if  (HASEXCEPTION())
            	        	        {
            	        	            goto ruleexprEx;
            	        	        }

            	        	        PLUS2_tree = (pANTLR3_BASE_TREE)(ADAPTOR->create(ADAPTOR, PLUS2));
            	        	        root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, PLUS2_tree, root_0));


            	        	    }
            	        	    break;
            	        	case 2:
            	        	    // D:\\message\\ExprCppTree.g:10:26: MINUS
            	        	    {
            	        	        MINUS3 = (pANTLR3_COMMON_TOKEN) MATCHT(MINUS, &FOLLOW_MINUS_in_expr55); 
            	        	        if  (HASEXCEPTION())
            	        	        {
            	        	            goto ruleexprEx;
            	        	        }

            	        	        MINUS3_tree = (pANTLR3_BASE_TREE)(ADAPTOR->create(ADAPTOR, MINUS3));
            	        	        root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, MINUS3_tree, root_0));


            	        	    }
            	        	    break;

            	            }
            	        }
            	        FOLLOWPUSH(FOLLOW_multExpr_in_expr59);
            	        multExpr4=multExpr(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto ruleexprEx;
            	        }

            	        ADAPTOR->addChild(ADAPTOR, root_0, multExpr4.tree);

            	    }
            	    break;

            	default:
            	    goto loop2;	/* break out of the loop */
            	    break;
                }
            }
            loop2: ; /* Jump out to here if this rule does not match */


        }

    }
    

    // This is where rules clean up and exit
    //
    goto ruleexprEx; /* Prevent compiler warnings */
    ruleexprEx: ;
    retval.stop = LT(-1);

    	retval.stop = LT(-1);
    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }


    return retval;
}
/* $ANTLR end expr */

/** 
 * $ANTLR start multExpr
 * D:\\message\\ExprCppTree.g:16:1: multExpr : atom ( TIMES atom )* ;
 */
static ExprCppTreeParser_multExpr_return
multExpr(pExprCppTreeParser ctx)
{   
    ExprCppTreeParser_multExpr_return retval;

    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    TIMES6;
    ExprCppTreeParser_atom_return atom5;
    #undef	RETURN_TYPE_atom5
    #define	RETURN_TYPE_atom5 ExprCppTreeParser_atom_return

    ExprCppTreeParser_atom_return atom7;
    #undef	RETURN_TYPE_atom7
    #define	RETURN_TYPE_atom7 ExprCppTreeParser_atom_return

    pANTLR3_BASE_TREE TIMES6_tree;

    /* Initialize rule variables
     */


    root_0 = NULL;

    TIMES6       = NULL;
    atom5.tree = NULL;
    atom7.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;

    TIMES6_tree   = NULL;


    retval.tree  = NULL;
    {
        // D:\\message\\ExprCppTree.g:17:5: ( atom ( TIMES atom )* )
        // D:\\message\\ExprCppTree.g:17:7: atom ( TIMES atom )*
        {
            root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->nilNode(ADAPTOR));

            FOLLOWPUSH(FOLLOW_atom_in_multExpr91);
            atom5=atom(ctx);

            FOLLOWPOP();
            if  (HASEXCEPTION())
            {
                goto rulemultExprEx;
            }

            ADAPTOR->addChild(ADAPTOR, root_0, atom5.tree);

            // D:\\message\\ExprCppTree.g:17:12: ( TIMES atom )*

            for (;;)
            {
                int alt3=2;
                switch ( LA(1) ) 
                {
                case TIMES:
                	{
                		alt3=1;
                	}
                    break;

                }

                switch (alt3) 
                {
            	case 1:
            	    // D:\\message\\ExprCppTree.g:17:13: TIMES atom
            	    {
            	        TIMES6 = (pANTLR3_COMMON_TOKEN) MATCHT(TIMES, &FOLLOW_TIMES_in_multExpr94); 
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulemultExprEx;
            	        }

            	        TIMES6_tree = (pANTLR3_BASE_TREE)(ADAPTOR->create(ADAPTOR, TIMES6));
            	        root_0 = (pANTLR3_BASE_TREE)(ADAPTOR->becomeRoot(ADAPTOR, TIMES6_tree, root_0));

            	        FOLLOWPUSH(FOLLOW_atom_in_multExpr97);
            	        atom7=atom(ctx);

            	        FOLLOWPOP();
            	        if  (HASEXCEPTION())
            	        {
            	            goto rulemultExprEx;
            	        }

            	        ADAPTOR->addChild(ADAPTOR, root_0, atom7.tree);

            	    }
            	    break;

            	default:
            	    goto loop3;	/* break out of the loop */
            	    break;
                }
            }
            loop3: ; /* Jump out to here if this rule does not match */


        }

    }
    

    // This is where rules clean up and exit
    //
    goto rulemultExprEx; /* Prevent compiler warnings */
    rulemultExprEx: ;
    retval.stop = LT(-1);

    	retval.stop = LT(-1);
    	retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->rulePostProcessing(ADAPTOR, root_0));
    	ADAPTOR->setTokenBoundaries(ADAPTOR, retval.tree, retval.start, retval.stop);

            if (HASEXCEPTION())
            {
                PREPORTERROR();
                PRECOVER();
                retval.tree = (pANTLR3_BASE_TREE)(ADAPTOR->errorNode(ADAPTOR, INPUT, retval.start, LT(-1), EXCEPTION));
            }


    return retval;
}
/* $ANTLR end multExpr */

/** 
 * $ANTLR start atom
 * D:\\message\\ExprCppTree.g:22:1: atom : ( INT | ID | '(' expr ')' );
 */
static ExprCppTreeParser_atom_return
atom(pExprCppTreeParser ctx)
{   
    ExprCppTreeParser_atom_return retval;

    pANTLR3_BASE_TREE root_0;

    pANTLR3_COMMON_TOKEN    INT8;
    pANTLR3_COMMON_TOKEN    ID9;
    pANTLR3_COMMON_TOKEN    char_literal10;
    pANTLR3_COMMON_TOKEN    char_literal12;
    ExprCppTreeParser_expr_return expr11;
    #undef	RETURN_TYPE_expr11
    #define	RETURN_TYPE_expr11 ExprCppTreeParser_expr_return

    pANTLR3_BASE_TREE INT8_tree;
    pANTLR3_BASE_TREE ID9_tree;
    pANTLR3_BASE_TREE char_literal10_tree;
    pANTLR3_BASE_TREE char_literal12_tree;

    /* Initialize rule variables
     */


    root_0 = NULL;

    INT8       = NULL;
    ID9       = NULL;
    char_literal10       = NULL;
    char_literal12       = NULL;
    expr11.tree = NULL;
    retval.start = LT(1); retval.stop = retval.start;

    INT8_tree   = NULL;
    ID9_tree   = NULL;
    char_literal10_tree   = NULL;
    char_literal12_tree   = NULL;


    retval.tree  = NULL;
    {
        {
            //  D:\\message\\ExprCppTree.g:22:5: ( INT | ID | '(' expr ')' )
            
            ANTLR3_UINT32 alt4;

            alt4=3;

            switch ( LA(1) ) 
            {
            case INT:
            	{
            		alt4=1;
            	}
                break;
            case ID:
            	{
            		alt4=2;
            	}
                break;
            case 12:
            	{
            		alt4=3;
            	}
                break;

            default:
                CONSTRUCTEX();
                EXCEPTION->type         = ANTLR3_NO_VIABLE_ALT_EXCEPTION;
                EXCEPTION->message      = (void *)"";
                EXCEPTION->decisionNum  = 4;
                EXCEPTION->state        = 0;


                goto ruleatomEx;
            }

            switch (alt4) 
            {
